日志模块订正